solucion recomendaciones